Commit by Keshav Savita 05-09-2022

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="please_enter_your_answer">Please enter your answer</string>
     <string name="chat_not_available">chat not available</string>
     <string name="please_enter_message">Please enter message</string>
+    <string name="add_fav">add favorite successfully.</string>
 </resources>
